Next Release

  - Process config reloading implemented by Anders Quist.  The
    supervisorctl program now has the commands "add" and "drop".
    "add <programname>" adds the process group implied by <programname>
    in the config file.  "drop <programname>" removes the process
    group from the running configuration (it must already be stopped).
    This makes it possible to add processes to and remove processes from
    a running supervisord without restarting the supervisord process.

  - Fixed a bug where opening the HTTP servers would fail silently
    for socket errors other than errno.EADDRINUSE.

  - Thanks to Dave Peticolas, using "reload" against a supervisord
    that is running in the background no longer causes supervisord
    to crash.

  - Configuration options for logfiles now accept mixed case reserved 
    words (e.g. "AUTO" or "auto") for consistency with other options.

  - childutils.eventdata was buggy, it could not deal with carriage returns
    in data.  See http://www.plope.com/software/collector/257.  Thanks
    to Ian Bicking.

  - Per-process exitcodes= configuration now will not accept exit
    codes that are not 8-bit unsigned integers (supervisord will not 
    start when one of the exit codes is outside the range of 0 - 255).

  - Per-process 'directory' value can now contain expandable values
    like %(here)s. (See http://www.plope.com/software/collector/262).

  - Accepted patch from Roger Hoover to allow for a new sort of
    process group: "fcgi-program".  Adding one of these to your
    supervisord.conf allows you to control fastcgi programs.  FastCGI
    programs cannot belong to heterogenous groups.

    The configuration for FastCGI programs is the same as regular
    programs except an additional "socket" parameter.  Substitution
    happens on the socket parameter with the 'here' and 'program_name'
    variables::

     [fcgi-program:fcgi_test]
     ;socket=tcp://localhost:8002
     socket=unix:///path/to/fcgi/socket
